compiler/lume_parser/src/snapshots/lume_parser__tests__switch_snapshots@single_arm.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"switch a { b => c }\")"
---
SOURCE_FILE@0..19
  EXPR_STMT@0..19
    SWITCH_EXPR@0..19
      SWITCH_KW@0..6 "switch"
      VARIABLE_EXPR@6..8
        WHITESPACE@6..7 " "
        NAME@7..8
          IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..17
        PAT_IDENT@11..12
          NAME@11..12
            IDENT@11..12 "b"
        WHITESPACE@12..13 " "
        BIG_ARROW@13..15 "=>"
        VARIABLE_EXPR@15..17
          WHITESPACE@15..16 " "
          NAME@16..17
            IDENT@16..17 "c"
      WHITESPACE@17..18 " "
      RIGHT_BRACE@18..19 "}"
