compiler/lume_parser/src/snapshots/lume_parser__tests__switch_snapshots@variant_absolute_backed.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement,\n\"switch a { std::Optional::Some(a) => a, std::Optional::None => 0 }\")"
---
SOURCE_FILE@0..66
  EXPR_STMT@0..66
    SWITCH_EXPR@0..66
      SWITCH_KW@0..6 "switch"
      WHITESPACE@6..7 " "
      VARIABLE_EXPR@7..8
        NAME@7..8
          IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..38
        PAT_VARIANT@11..33
          PATH@11..30
            PATH_NAMESPACE@11..14
              NAME@11..14
                IDENT@11..14 "std"
            PATH_SEP@14..16 "::"
            PATH_TYPE@16..24
              NAME@16..24
                IDENT@16..24 "Optional"
            PATH_SEP@24..26 "::"
            PATH_VARIANT@26..30
              NAME@26..30
                IDENT@26..30 "Some"
          LEFT_PAREN@30..31 "("
          PAT_IDENT@31..32
            NAME@31..32
              IDENT@31..32 "a"
          RIGHT_PAREN@32..33 ")"
        WHITESPACE@33..34 " "
        BIG_ARROW@34..36 "=>"
        WHITESPACE@36..37 " "
        VARIABLE_EXPR@37..38
          NAME@37..38
            IDENT@37..38 "a"
      COMMA@38..39 ","
      WHITESPACE@39..40 " "
      SWITCH_ARM@40..64
        PAT_VARIANT@40..60
          PATH@40..60
            PATH_NAMESPACE@40..43
              NAME@40..43
                IDENT@40..43 "std"
            PATH_SEP@43..45 "::"
            PATH_TYPE@45..53
              NAME@45..53
                IDENT@45..53 "Optional"
            PATH_SEP@53..55 "::"
            PATH_VARIANT@55..60
              NAME@55..59
                IDENT@55..59 "None"
              WHITESPACE@59..60 " "
        BIG_ARROW@60..62 "=>"
        WHITESPACE@62..63 " "
        LIT_EXPR@63..64
          INTEGER_LIT@63..64
            INTEGER_LIT@63..64 "0"
      WHITESPACE@64..65 " "
      RIGHT_BRACE@65..66 "}"
