compiler/lume_parser/src/snapshots/lume_parser__tests__switch_snapshots@variant_backed.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement,\n\"switch a { Optional::Some(a) => a, Optional::None => 0 }\")"
---
SOURCE_FILE@0..56
  EXPR_STMT@0..56
    SWITCH_EXPR@0..56
      SWITCH_KW@0..6 "switch"
      WHITESPACE@6..7 " "
      VARIABLE_EXPR@7..8
        NAME@7..8
          IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..33
        PAT_VARIANT@11..28
          PATH@11..25
            PATH_TYPE@11..19
              NAME@11..19
                IDENT@11..19 "Optional"
            PATH_SEP@19..21 "::"
            PATH_VARIANT@21..25
              NAME@21..25
                IDENT@21..25 "Some"
          LEFT_PAREN@25..26 "("
          PAT_IDENT@26..27
            NAME@26..27
              IDENT@26..27 "a"
          RIGHT_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BIG_ARROW@29..31 "=>"
        WHITESPACE@31..32 " "
        VARIABLE_EXPR@32..33
          NAME@32..33
            IDENT@32..33 "a"
      COMMA@33..34 ","
      WHITESPACE@34..35 " "
      SWITCH_ARM@35..54
        PAT_VARIANT@35..50
          PATH@35..50
            PATH_TYPE@35..43
              NAME@35..43
                IDENT@35..43 "Optional"
            PATH_SEP@43..45 "::"
            PATH_VARIANT@45..50
              NAME@45..49
                IDENT@45..49 "None"
              WHITESPACE@49..50 " "
        BIG_ARROW@50..52 "=>"
        WHITESPACE@52..53 " "
        LIT_EXPR@53..54
          INTEGER_LIT@53..54
            INTEGER_LIT@53..54 "0"
      WHITESPACE@54..55 " "
      RIGHT_BRACE@55..56 "}"
