compiler/lume_parser/src/snapshots/lume_parser__tests__switch_snapshots@variant_generic.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement,\n\"switch a { Optional<T>::Some(a) => a, std::Optional<T>::None => 0 }\")"
---
SOURCE_FILE@0..67
  EXPR_STMT@0..67
    SWITCH_EXPR@0..67
      SWITCH_KW@0..6 "switch"
      WHITESPACE@6..7 " "
      VARIABLE_EXPR@7..8
        NAME@7..8
          IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      LEFT_BRACE@9..10 "{"
      WHITESPACE@10..11 " "
      SWITCH_ARM@11..36
        PAT_VARIANT@11..31
          PATH@11..28
            PATH_TYPE@11..22
              NAME@11..19
                IDENT@11..19 "Optional"
              GENERIC_ARGS@19..22
                LESS@19..20 "<"
                NAMED_TYPE@20..21
                  PATH@20..21
                    PATH_TYPE@20..21
                      NAME@20..21
                        IDENT@20..21 "T"
                GREATER@21..22 ">"
            PATH_SEP@22..24 "::"
            PATH_VARIANT@24..28
              NAME@24..28
                IDENT@24..28 "Some"
          LEFT_PAREN@28..29 "("
          PAT_IDENT@29..30
            NAME@29..30
              IDENT@29..30 "a"
          RIGHT_PAREN@30..31 ")"
        WHITESPACE@31..32 " "
        BIG_ARROW@32..34 "=>"
        WHITESPACE@34..35 " "
        VARIABLE_EXPR@35..36
          NAME@35..36
            IDENT@35..36 "a"
      COMMA@36..37 ","
      WHITESPACE@37..38 " "
      SWITCH_ARM@38..65
        PAT_VARIANT@38..61
          PATH@38..61
            PATH_NAMESPACE@38..41
              NAME@38..41
                IDENT@38..41 "std"
            PATH_SEP@41..43 "::"
            PATH_TYPE@43..54
              NAME@43..51
                IDENT@43..51 "Optional"
              GENERIC_ARGS@51..54
                LESS@51..52 "<"
                NAMED_TYPE@52..53
                  PATH@52..53
                    PATH_TYPE@52..53
                      NAME@52..53
                        IDENT@52..53 "T"
                GREATER@53..54 ">"
            PATH_SEP@54..56 "::"
            PATH_VARIANT@56..61
              NAME@56..60
                IDENT@56..60 "None"
              WHITESPACE@60..61 " "
        BIG_ARROW@61..63 "=>"
        WHITESPACE@63..64 " "
        LIT_EXPR@64..65
          INTEGER_LIT@64..65
            INTEGER_LIT@64..65 "0"
      WHITESPACE@65..66 " "
      RIGHT_BRACE@66..67 "}"
