compiler/lume_parser/src/snapshots/lume_parser__tests__trait_snapshots@empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"trait Add { }\")"
---
[
    TypeDefinition(
        Trait(
            TraitDefinition {
                visibility: Private(
                    Private {
                        location: Location(
                            0..0,
                        ),
                    },
                ),
                name: Identifier {
                    name: "Add",
                    location: Location(
                        6..9,
                    ),
                },
                type_parameters: [],
                methods: [],
                location: Location(
                    0..13,
                ),
                documentation: None,
            },
        ),
    ),
]
