compiler/lume_parser/src/snapshots/lume_parser__tests__visibility_snapshots@default.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"fn foo {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private {
                location: Location(
                    0..0,
                ),
            },
            external: false,
            name: Identifier {
                name: "foo",
                location: Location(
                    3..6,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: None,
            block: Block {
                statements: [],
                location: Location(
                    7..9,
                ),
            },
            location: Location(
                0..9,
            ),
            documentation: None,
        },
    ),
]
